# deb-testresources

./: .bzrignore  .gitignore  .gitreview  .travis.yml  BSD  GOALS  MANIFEST.in  Makefile  NEWS  README  README.rst  TODO  setup.cfg  setup.py  test_all.py  tox.ini
debian/: changelog  control  copyright  gbp.conf  rules  watch
debian/patches/: remove-non-deterministic-ftbfs-testBasicSortTests.patch  series
debian/source/: options
doc/: example.py
lib/testresources/: __init__.py  dijkstra.py  priodict.py
lib/testresources.egg-info/: PKG-INFO  SOURCES.txt
lib/testresources/tests/: TestUtil.py  __init__.py  test_optimising_test_suite.py  test_optimizing_test_suite.py  test_resource_graph.py  test_resourced_test_case.py  test_test_loader.py  test_test_resource.py
testresources/: __init__.py
testresources/tests/: test_optimising_test_suite.py  test_test_resource.py
