[metadata]
name = testresources
author = Testresources developers
author_email = https://launchpad.net/~testresources-developers
home-page = https://launchpad.net/testresources
summary = Testresources, a pyunit extension for managing expensive test resources
description-file = README
keyword = unittest, testing, fixtures
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[extras]
test =
    docutils
    fixtures
    testtools

[files]
scripts =

[wheel]
universal=1
